Fixed padding on main article h1, font size on mobile

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -126,10 +126,10 @@ main
     margin-top: mm(3)
 
     h1
+      font-size: 150%
       font-weight: 400
       line-height: 1.33
       overflow: hidden
-      padding: 0 1em
       text-align: center
       a:link, a:visited
         color: $text-color
@@ -260,3 +260,4 @@ footer
     article
       h1
         font-size: 200%
+        padding: 0 1em
